# MCTP-API

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  manage.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  test_push_verify.md
.gitcode/workflows/: ci.yml
.gitea/workflows/: ci.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml
docs/: microsoft-oauth-setup.md  showdoc.txt
docs/showdoc/API 开发/: API 架构概览.md  API 端点列表.md  JWT 认证说明.md  异常处理机制.md  统一响应格式.md
docs/showdoc/CI_CD/: GitHub Actions CI.md  PR 自动标签.md
docs/showdoc/开发环境/: EditorConfig 统一编辑器.md  Makefile 常用命令.md  VS Code 团队配置.md
docs/showdoc/开发规范/: Commit 提交规范.md  Git 工作流.md  GitHub 组织与仓库权限矩阵.md  分支命名规范.md
docs/showdoc/模板/: Bug 报告模板.md  Pull Request 模板.md  功能请求模板.md
docs/showdoc/配置/: Pre-commit Hooks 配置.md  代码检查配置 (Ruff).md
docs/showdoc/项目概览/: 环境变量说明.md
mctp_api/: asgi.py  settings.py  urls.py  wsgi.py
mctp_api/auth/: __init__.py  admin.py  apps.py  microsoft.py  microsoft_views.py  models.py  serializers.py  tests.py  urls.py  views.py
mctp_api/auth/migrations/: 0001_initial.py
mctp_api/mctp_api_core/: apps.py  exceptions.py  response.py  tests.py  urls.py  views.py
scripts/: sync_showdoc.py
