[project]
name = "mctp-api"
version = "0.1.0"
description = "MCTP API - Django REST API"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "djangorestframework>=3.15,<4.0",
    "django-cors-headers>=4.4,<5.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "drf-spectacular>=0.29,<1.0",
    "gunicorn>=21.2,<22.0; sys_platform != 'win32'",
    "whitenoise>=6.6,<7.0",
    "requests>=2.31,<3.0",
    "cryptography>=42.0,<46.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1.0",
    "pre-commit>=4.0,<5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Django 模板文件，未来会使用这些导入
"*/admin.py" = ["F401"]
"*/models.py" = ["F401"]
"*/views.py" = ["F401"]
"*/tests.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["mctp_api"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
